spec/neg/use-schema-uppercase.wv
-- Test that uppercase keywords are rejected

-- This should fail with a syntax error
use SCHEMA test_schema